# dja-pipes

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml
dja-pipes/files/: file_for_pipes.phot.cat  file_for_pipes.spec.fits
dja-pipes/filters/: filt_list.txt
dja-pipes/notebooks/: db_pull_funcs.py  photcats_latest.csv  pipes_fitting_funcs.py  pipes_plotting_funcs.py  run_pipes_on_dja_spec.ipynb  run_pipes_on_dja_spec_20240924.ipynb  spec_cat_temp.fits
dja-pipes/notebooks/files/: gds-barrufet-s67-v3_prism-clear_2198_6620.phot.cat  gds-barrufet-s67-v3_prism-clear_2198_6620.spec.fits
dja-pipes/notebooks/pipes/cats/: gds-barrufet-s67-v3_prism-clear_2198_6620.spec.fits_posterior_quants.csv
dja-pipes/notebooks/pipes/posterior/pipes_test/: 3.h5
dja-pipes/notebooks/pipes/posterior/test/: 0.h5
djapipes/: __init__.py  database.py  fitting.py  pipes_plotting_funcs.py  plotting.py  run.py  utils.py
djapipes/data/: photcats_latest.csv
djapipes/data/filters/: filt_list.txt  filt_list_hst_jwst.txt  zeropoints.csv
working_directory/: prepare-database.ipynb  run_pipes_on_dja_spec.ipynb
working_directory/filters/: filt_list_hst_jwst.txt
working_directory/notebooks/: run_pipes_on_dja_spec.ipynb  zeropoints.csv
