[tool:pytest]
testpaths = "djapipes/tests"

[metadata]
name = djapipes
description = Runs BAGPIPES on any JWST/NIRSpec PRISM spectrum from the DAWN JWST Archive exposures
author = R. Gottumukkala
license = MIT
license_files = LICENSE
url = https://github.com/RashmiGot/dja-pipes
edit_on_github = False
github_project = RashmiGot/dja-pipes
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/RashmiGot/dja-pipes
    Tracker = https://github.com/RashmiGot/dja-pipes/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.10
packages = 
    djapipes
install_requires = 
    bagpipes
    jupyter
    grizli[aws]
    eazy
    dust_attenuation @ git+https://github.com/karllark/dust_attenuation.git
    msaexp
    wget
    tabulate
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    pytest-cov
    flake8
docs =
    sphinx
    sphinx-astropy

[options.package_data]
djapipes.data =
    *
    filters/*